{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "c191193d-746c-4bbc-97cc-29ab7f9d22cc",
            "actions": [
                {
                    "name": "FirstTouchPosition",
                    "type": "Value",
                    "id": "9533cd12-82a6-41cf-8caa-93751a2414b4",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SecondTouchPosition",
                    "type": "Value",
                    "id": "d84d97ae-d1e9-424d-ba9d-dc0ea44cf535",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "FirstTouchDelta",
                    "type": "Value",
                    "id": "8dfc037a-b38a-4470-881d-d505407b98e6",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SecondTouchDelta",
                    "type": "Value",
                    "id": "b2ef82e9-158f-4b9d-9cb5-548b0c750b3c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseDelta",
                    "type": "Value",
                    "id": "2b88a57d-3168-449c-8838-c549388526dd",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "DoubleTapReleased",
                    "type": "Value",
                    "id": "d00b3dbc-7729-48e4-b7a5-e8ad4919dd9e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "Press(behavior=1)",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a75f8f45-b612-47ad-ba7b-95551487ff19",
                    "path": "<Touchscreen>/touch0/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FirstTouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "42164c30-70b0-4f1c-8ac4-3231f5afaba5",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FirstTouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "332b8ec0-5427-4ba6-b678-46c0b2028b8f",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondTouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a16d3c76-0cc1-404d-a6a9-0cb4b8bb29d8",
                    "path": "<Touchscreen>/touch0/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FirstTouchDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d69b5cc3-8be0-4d6f-8028-b5dd5ca27dcc",
                    "path": "<Touchscreen>/touch1/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondTouchDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e7a70f7b-5709-480d-8507-65917e36c326",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3afd5057-b4f8-49e4-9c46-517335beb48d",
                    "path": "<Touchscreen>/touch0/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DoubleTapReleased",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UnitSelection",
            "id": "7d218776-9eb0-4a40-971b-73432cdaf32f",
            "actions": [
                {
                    "name": "Tap",
                    "type": "Button",
                    "id": "3e01906a-947c-47c7-b4c1-7167d8d7d485",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap",
                    "initialStateCheck": false
                },
                {
                    "name": "FirstTouchInformation",
                    "type": "Value",
                    "id": "5812a79a-46a6-481c-a393-aab38029d3d7",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "HoldFinger",
                    "type": "PassThrough",
                    "id": "9e7f2361-35dd-4cb3-8ec4-ccf4b0c71915",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": false
                },
                {
                    "name": "DoubleTap",
                    "type": "Button",
                    "id": "b10f0233-fb56-427e-9479-adb78675b258",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "06209d5c-dcd0-4ce6-a8f2-8e3cbc2d5eb6",
                    "path": "<Touchscreen>/touch*/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Tap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2825c1c7-927b-41a1-921d-5cbed685e295",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Tap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4e5a2667-5c19-40f5-a601-4548ef7e3e9f",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FirstTouchInformation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7217caca-862f-4a16-99de-15c37eaf87ee",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HoldFinger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "350333bb-15b8-43e1-9607-b7ddee62f70a",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HoldFinger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9f3c9f80-9c27-4e3f-8136-700726e51720",
                    "path": "<Touchscreen>/Press",
                    "interactions": "MultiTap",
                    "processors": "",
                    "groups": "",
                    "action": "DoubleTap",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Tap",
            "id": "c3c9095a-2f22-450a-8803-64ca4405e871",
            "actions": [
                {
                    "name": "TapPosition",
                    "type": "Button",
                    "id": "cda53d0f-cf92-43f6-a0c5-393aefb1bf24",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6077fb0f-aeb0-4ab8-9518-b8e7e6c7a072",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TapPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "114ecd79-0b3e-4c67-9c1c-a1b765f58d0c",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TapPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "458c7323-5c73-41d7-b9aa-61b9b8b86d96",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TapPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Camera",
            "id": "e982cca6-3eba-43c5-b257-f50d98e75cfa",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "6637bad3-b682-49b6-9bcf-975c30162e92",
                    "expectedControlType": "Delta",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7abe295f-c608-46ba-9a49-57e88917a8bb",
                    "path": "<Touchscreen>/touch1/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}